Added Request a POS feature
